# ICP-Rust

./: Cargo.toml  README.md  dfx.json  package.json
Exam/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
Exam/src/Exam_backend/: Cargo.toml
Exam/src/Exam_backend/src/: lib.rs
Exam/src/Exam_frontend/: index.html  package.json
Exam/src/Exam_frontend/src/: App.js  index.js
Final_project/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
Final_project/src/Final_project_backend/: Cargo.toml  Final_project_backend.did
Final_project/src/Final_project_backend/src/: lib.rs
Final_project/src/Final_project_frontend/: package.json
Final_project/src/Final_project_frontend/src/: App.jsx
counter/: package-lock.json
counter/src/counter_backend/: Cargo.toml
counter/src/counter_frontend/: package.json
dependecies/: Cargo.toml  README.md  dfx.json
dependecies/src/dependecies_backend/: Cargo.toml
intercanister/: package-lock.json
intercanister/intercanister/local/: network-id
intercanister/local/: canister_ids.json
intercanister/src/publisher/: Cargo.toml
intercanister/src/subscriber/: Cargo.toml
proposal2/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
proposal2/src/proposal2_backend/: Cargo.toml  proposal2_backend.did
proposal2/src/proposal2_frontend/: package.json
src/trial_backend/: Cargo.toml  trial_backend.did
src/trial_backend/src/: lib.rs
src/trial_frontend/: index.html  package.json
src/trial_frontend/src/: App.js
trial/: README.md  package-lock.json
(+16 files in other folders)
