[package]
name = "trial_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]





[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
ic-cdk-timers = "0.7"  # Ensure this is needed, otherwise comment it out
ic-stable-structures = "0.6.4"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0"
 # Feel free to remove this dependency if you don't need timers
