[package]
name = "Final_project_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.14"
ic-cdk-timers = "0.8" # Feel free to remove this dependency if you don't need timers
#A collection of scalable data structures for the Internet Computer that persist across upgrades. like BTreeMap in this example
ic-stable-structures = "0.6.4"
serde = "1.0.201"
bound = "0.5.0"